docs(i18n): sync i18n files from Crowdin (#11203)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -1092,6 +1092,37 @@
     "wallet_status_pending_clear_all": "すべて消去",
     "wallet_risk_warning_no_select_wallet": "ウォレットを選択していません",
     "wallet_risk_warning_dialog_title": "リスク警告",
+    "wallet_risk_warning_content": "ユーザーの皆様へ<br/><br/>Mask Networkのウォレット関連プラグインをご利用の際は、以下の利用リスクをご確認ください。<br/><br/>Mask Networkは、非商用の無料サービスを提供しています。プラグインは、コミュニティメンバーやその他の優れたDAppチームによって提供されています。分散型ネットワークの自由度やその他の不安定なリスク要因のため、ユーザーはウォレットのニーモニックワードや秘密鍵などの機密情報を適切に保護することが求められます。ブロックチェーン契約のやり取りを行う際には、十分に注意してください。サードパーティ製のDApps（プラグイン）によるリスクは、サードパーティ製のDApps自身が負うことになります。",
+    "wallet_risk_warning_confirm_tips": "確認ボタンをクリックすると、上記のリスクを負うことに同意することになります。",
+    "wallet_risk_confirm_confirming": "確認中",
+    "wallet_risk_confirm_failed": "確認に失敗しました",
+    "wallet_name_length_error": "文字列には少なくとも1文字が含まれていなければなりません。",
+    "add_collectibles_token_id_placeholder": "トークンIDはカンマで区切られています。例: 1223,1224",
+    "plugin_wallet_solana_tips": "Phantom は Solana チェーンのみを対応します。",
+    "plugin_wallet_blocto_tips": "Blocto は Flow チェーンのみを対応します。",
+    "plugin_wallet_fortmatic_tips": "FortmaticはETHとBNBチェーンのみを対応しています。",
+    "plugin_wallet_support_chains_tips": "EVMチェーン、ETH、BNBチェーン、Polygon、Arb、Opなどに対応しています。",
+    "plugin_wallet_connect_fortmatic": "Fortmaticに接続",
+    "plugin_wallet_choose_network": "ネットワークを選択",
+    "plugin_disabled_tip": "特定のコンテンツを表示するには、DAPPを開く必要があります。",
+    "manage_network": "ネットワークを管理する",
+    "network_management_add_network": "ネットワークを追加",
+    "network_name": "ネットワーク名",
+    "rpc_url": "RPC URL",
+    "chain_id": "チェーン ID",
+    "optional_currency_symbol": "通貨記号（オプション）",
+    "optional_block_explorer_url": "ブロックエクスプローラーのURL",
+    "account_already_exists": "このウォレット名は既に存在しています.",
+    "network_already_exists": "このネットワーク名は既に存在します",
+    "incorrect_rpc_url": "RPCのURLが無効です。",
+    "incorrect_explorer_url": "無効なブロックエクスプローラのURLです。",
+    "rpc_url_is_used_by": "この RPC URL は現在 {{- name}} ネットワークによって使用されています",
+    "chain_id_is_used_by": "このチェーン ID は現在、 {{- name}} ネットワークによって使用されます。 ",
+    "failed_to_fetch_chain_id": "チェーンIDを取得できませんでした。RPCのURLは正しいですか？",
+    "rpc_return_different_chain_id": "入力されたRPC URLは、異なるチェーンID（{{chain_id}}）を返しました。追加しようとしているネットワークのRPC URLに合わせてチェーンIDを更新してください。",
+    "rpc_return_different_symbol": "チェーンID {{chain_id}}のネットワークでは、入力した通貨記号と異なる通貨記号（{{symbol}}）を使用している可能性があります。ご確認ください。",
+    "rpc_requires_https": "URL には適切な HTTPS プレフィックスが必要です。",
+    "failed_to_save_network": "ネットワークを保存できませんでした",
     "incorrect_chain_id": "不正なチェーンIDです",
     "invalid_number": "無効な番号です",
     "saved_network_successfully": "ネットワークを保存しました",
@@ -1142,5 +1173,10 @@
     "transaction_completed_at": "トランザクションが完了し、 {{- datetime}}でブロックチェーンに記録されました",
     "collectible_title": "コレクティブ",
     "collectible_description": "説明",
-    "collectible_properties": "プロパティ"
+    "collectible_properties": "プロパティ",
+    "collectible_last_sale_price": "プロパティ",
+    "about_collection": "{{- name}} の数",
+    "hide_collectible": "{{-name}} を非表示",
+    "hide_collectible_description": "{{- name}}を非表示にしますか？このNFTをいつでも再追加することで再表示できます。",
+    "add_new_address_to_an_existing_group": "既存のグループに新しいアドレスを追加"
 }
