--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -950,7 +950,8 @@
     "popups_set_avatar_successfully": "Avatar set successfully",
     "popups_set_avatar_failed": "Failed to set Avatar.",
     "popups_wallet_request_source": "Request Source",
-    "popups_wallet_sign_message": "Sign Messsage",
+    "popups_wallet_sign_message": "Signing Messsage (Text)",
+    "popups_wallet_sign_raw_message": "Signing Message (Hex)",
     "popups_wallet_unlock_erc20_title": "Give permission to access <br /> your {{symbol}}?",
     "popups_wallet_unlock_erc20_tips": "By granting permission, you are allowing the following <br /> contract to access your funds",
     "popups_wallet_unlock_erc20_placeholder": "Enter Max spend limit",
