--- a/packages/plugins/NextID/src/locales/ja-JP.json
+++ b/packages/plugins/NextID/src/locales/ja-JP.json
@@ -1,4 +1,31 @@
 {
+    "wallet": "ウォレット",
+    "persona": "ペルソナ",
+    "unsupported_network": "対応していないネットワーク",
+    "connect_wallet__other_user_tip_intro": "ウォレットが見つかりません。",
+    "connect_wallet_other_user_tip1": "1. ユーザーのツイートページに切り替え、戻ります。",
+    "connect_wallet_other_user_tip2": "2. マスク拡張機能をインストールするようにユーザーを招待し、確認ツイートを投稿します。",
+    "connect_wallet_other_user_instruction": "ユーザーはまだウォレットに接続していない可能性があります。次のように試すことができます:",
+    "connect_wallet_tip": "このWeb3セクションでは、あなたのNFTコレクションのヒントを受け取るためのあなたのアドレスを表示することができます. Mask Networkをインストールした友人に寄付記録やその他のオンチェーン情報を提供しています。",
+    "verify_wallet_intro": "ウォレットを確認するにはこちら。",
+    "verify_wallet": "Web3タブでは、チップ、NFTコレクション、寄付記録、その他のオンチェーンフィードを受け取るためのウォレットアドレスを、同じくMaskエクステンションをインストールした友人に見せることができます。",
+    "verify_Twitter_ID_intro": "Twitter IDを確認するにはこちら。",
+    "verify_Twitter_ID": "Twitter IDをNext.IDで確認して、Web3のエクスペリエンスを向上させることができます。",
+    "verify_other_Twitter_ID_intro": "このユーザーはウォレットに接続していません。",
+    "verify_Twitter_ID_button": "Twitter IDの認証",
+    "verify_wallet_button": "ウォレットの認証",
+    "add_wallet_button": "ウォレットを追加",
+    "verify_wallet_dialog_title": "ウォレットの認証",
+    "bind_wallet_bound_error": "このウォレットアドレスは既に接続されています。",
+    "unbind_wallet_same_account_error": "切断したいアドレスに切り替えてください。",
+    "unbind_dialog_title": "ウォレットを接続解除する",
+    "persona_sign": "ペルソナサイン",
+    "wallet_sign": "ウォレットサイン",
+    "copied": "コピーしました",
+    "provided_by": "提供元",
+    "view_on_explorer": "エクスプローラーで表示",
+    "notify_persona_sign": "ペルソナサイン",
+    "notify_persona_sign_confirm": "ペルソナでこのサインを確認する",
     "nft_not_belong_to_you": "コレクションは存在しないか、あなたに属していません。",
     "send_tip_successfully": "チップを送信しました。",
     "send_specific_tip_successfully": "{{- amount}} {{name}} チップを送信しました。",
