docs(i18n): sync i18n files from Crowdin (#11216)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

--- a/packages/plugins/GoPlusSecurity/src/locales/ja-JP.json
+++ b/packages/plugins/GoPlusSecurity/src/locales/ja-JP.json
@@ -30,6 +30,25 @@
     "not_found_tip_title": "結果が見つかりません。チェーンネットワークエラー、オンチェーンデータ異常、トークンアドレスがカバーされていない可能性があります。以下のように確認してください：",
     "not_found_tip_network_error": "1. ネットワークが動作していることを確認してください。",
     "risk_is_honeypot_title": "トークンがハニーポットになるかもしれない。",
+    "risk_is_honeypot_body": "このトークンコントラクトには、販売できないコードが含まれています。たぶんこれはハニーポットです。",
+    "risk_is_not_honeypot_title": "これはハニーポットには見えません。",
+    "risk_is_not_honeypot_body": "当社はトークンの販売を妨げるコードを認識していません。",
+    "risk_transfer_pausable_title": "取引を中断できる機能",
+    "risk_transfer_pausable_body": "サスペンド可能なコードが含まれている場合、トークンは購入も販売もされていない可能性があります(ハニーポットリスク)。",
+    "risk_no_code_transfer_pausable_title": "取引を中断するコードが見つかりませんでした。",
+    "risk_no_code_transfer_pausable_body": "サスペンド可能なコードが含まれている場合、トークンは購入も販売もされていない可能性があります(ハニーポットリスク)。",
+    "risk_is_anti_whale_title": "クジラ対策(取引回数制限あり)",
+    "risk_is_anti_whale_body": "トークントランザクションの数は限られています。詐欺トークントランザクションの数は限られている可能性があります (ハニーポットリスク)。",
+    "risk_is_no_anti_whale_title": "ノークジラ対策(取引回数制限なし)",
+    "risk_is_no_anti_whale_body": "トークントランザクションの数に制限はありません。詐欺トークントランザクションの数は限られている可能性があります (ハニーポットリスク)。",
+    "risk_slippage_modifiable_title": "税金は変更可能です",
+    "risk_slippage_modifiable_body": " 契約所有者は、取引税を変更する権限を含めることができます。 取引税が49%以上に引き上げられると、トークンは取引できなくなります(ハニーポットリスク)。",
+    "risk_not_slippage_modifiable_title": "税金は変更できません",
+    "risk_not_slippage_modifiable_body": "契約の所有者は、取引税を変更する権限を含めることはできません。 取引税を49%以上に引き上げると、トークンは取引できなくなります(ハニーポットリスク)。",
+    "risk_is_blacklisted_title": "ブラックリスト機能",
+    "risk_is_blacklisted_body": "ブラックリスト機能が含まれています。一部のアドレスは通常取引できない場合があります (ハニーポットリスク)。",
+    "risk_not_is_blacklisted_title": "ブラックリストなし",
+    "risk_not_is_blacklisted_body": "ブラックリスト機能は含まれていません。ブラックリストがある場合、一部のアドレスは正常に取引できない可能性があります (ハニーポットリスク)。",
     "risk_not_is_whitelisted_body": "ホワイトリスト機能は含まれていません。ホワイトリストがある場合、一部のアドレスは正常に取引できない可能性があります (ハニーポットリスク)。",
     "risk_is_true_token_title": "真トークン",
     "risk_is_true_token_body": "このトークンは宣言されたチームによって発行される。一部の詐欺は、ユーザーから資産を詐取するために、同じ名前のよく知られたトークンを作成します。",
