fix: remove twitter blue

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -582,8 +582,8 @@
     "plugin_infra_descriptor_token_revoke_success": "Revoke the approval successfully.",
     "plugin_infra_descriptor_token_revoke_fail": "Failed to revoke token contract.",
     "plugin_infra_descriptor_token_approve_title": "Unlock Token",
-    "plugin_infra_descriptor_token_approve": "Unlock {{- tokenAmountDescription}}",
-    "plugin_infra_descriptor_token_approve_success": "Unlock {{- tokenAmountDescription}} successfully",
+    "plugin_infra_descriptor_token_approve": "Unlock {{symbol}}",
+    "plugin_infra_descriptor_token_approve_success": "Unlock {{symbol}} successfully",
     "plugin_infra_descriptor_token_revoke_but_set_positive_cap": "You've approved {{- tokenAmountDescription}} for {{spender}}. If you want to revoke that token, please keep custom spending cap amount as 0 and try it again.",
     "plugin_infra_descriptor_token_approve_but_set_zero_cap": "You didn't approve {{symbol}} successfully. Please do not set spending cap as 0 and try it again.",
     "plugin_infra_descriptor_token_fail": "Failed to unlock token contract.",
