--- a/packages/mask/shared-ui/locales/ko-KR.json
+++ b/packages/mask/shared-ui/locales/ko-KR.json
@@ -91,11 +91,11 @@
     "application_display_tab_plug_app-unlisted-placeholder": "설정 아이콘을 클릭하여 앱 보드에 나열합니다.",
     "application_settings_tab_plug_app-unlisted-placeholder": "애프리케이션 아이콘을 클릭하여 앱 보드에 나열합니다.",
     "persona_load_failed": "로딩 실패",
-    "additional_post_box__encrypted_post_pre": "#mask_io로 이 게시물을 해독하기. {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "#mask_io로 행운 드랍을 수령해 보세요. @{{account}} \n\n$t(promote_red_packet)\n {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet": "#mask_io {{encrypted}} 덧붙이고 레드 패킷을 수령하세요.",
-    "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{encrypted}}",
+    "additional_post_box__encrypted_post_pre": "#mask_io로 이 게시물을 해독하기. {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "#mask_io로 행운 드랍을 수령해 보세요. @{{account}} \n\n$t(promote_red_packet)\n {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet": "#mask_io {{- encrypted}} 덧붙이고 레드 패킷을 수령하세요.",
+    "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{- encrypted}}",
     "additional_post_box__steganography_post_pre": "암호화된 이미지입니다. 📪🔑 mask.io 설치하고 해독하세요. {{random}}",
     "auto_paste_failed_dialog_title": "수동으로 붙여넣기",
     "auto_paste_failed_dialog_content": "아래의 문자와 이미지(있으면)를 복사하고 공유하세요",
