fix: mf-5995 missing unescaping

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -103,9 +103,9 @@
     "persona_load_failed": "Load failed",
     "additional_post_box__encrypted_post_pre": "Decrypt this post with #mask_io! $t(promote) {{- encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "$t(promote_red_packet) Follow @{{account}} for Web3 updates and insights. \n\n🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io. \n\n{{- encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet": "$t(promote_red_packet) \n\n🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io. \n\n{{encrypted}}",
-    "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet": "$t(promote_red_packet) \n\n🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io. \n\n{{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{- encrypted}}",
     "additional_post_box__steganography_post_pre": "This image is encrypted with #mask_io. \n{{random}}\n\nInstall Mask.io to send your first encrypted tweet.",
     "auto_paste_failed_dialog_title": "Paste manually",
     "auto_paste_failed_dialog_content": "Please copy the following text and image (if there is any) and publish it.",
