--- a/packages/mask/content-script/site-adaptors/twitter.com/locales/en-US.json
+++ b/packages/mask/content-script/site-adaptors/twitter.com/locales/en-US.json
@@ -1,3 +1,3 @@
 {
-    "additional_post_box__encrypted_post_pre": "This tweet is encrypted with #mask_io (@realMaskNetwork). 📪🔑\n\n🎭 🎭🎭 Tired of plaintext? Try to send encrypted messages to your friends. Install {{encrypted}} to send your first encrypted tweet."
+    "additional_post_box__encrypted_post_pre": "This tweet is encrypted with #mask_io (@realMaskNetwork). 📪🔑\n\n🎭 🎭🎭 Tired of plaintext? Try to send encrypted messages to your friends. Install {{- encrypted}} to send your first encrypted tweet."
 }
