fix: mf-6000 update description for SwitchLogo

--- a/packages/plugins/SwitchLogo/src/locales/en-US.json
+++ b/packages/plugins/SwitchLogo/src/locales/en-US.json
@@ -1,5 +1,5 @@
 {
-    "title": "Switch Twitter Logo",
+    "title": "Switch X Logo",
     "save_tip": "Share and recommend this feature after saving.",
     "reset": "Reset",
     "save": "Save",
