--- a/packages/plugins/SwitchLogo/src/locales/zh-CN.json
+++ b/packages/plugins/SwitchLogo/src/locales/zh-CN.json
@@ -1,5 +1,5 @@
 {
-    "title": "切换 Twitter 标志",
+    "title": "切换 X 标志",
     "save_tip": "保存后分享并推荐此功能。",
     "reset": "重置",
     "save": "保存",
@@ -9,7 +9,7 @@
     "mask_network": "Mask Network",
     "share_text": "我刚刚使用 Mask Network 插件把T witter X 图标替换成了原来的蓝鸟图标。",
     "share_mask": "下载 https://mask.io，在Twitter上尝试更强大的工具。",
-    "description": "在经典的Twitter标志和新标志之间切换。",
+    "description": "在经典的 Twitter 标志和新的 X 标志之间切换。",
     "switch_logo_title": "切换 Twitter 标志",
     "switch_logo_save_tip": "保存后分享并推荐此功能。",
     "switch_logo_classics_logo": "经典标志",
