--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -1,4 +1,5 @@
 {
+    "amount": "Amount",
     "promote": "🧧🧧🧧 Try sending Lucky Drop to your friends with tokens or NFTs to share the joy now! Install Mask.io to send your first Lucky Drop.",
     "promote_short": "🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io.",
     "nft_shift_select_tip": "You can also use <text>{{text}}</text> to select multiple NFTs.",
@@ -89,8 +90,10 @@
     "history_duration": "{{- time}} (UTC+8)",
     "best_wishes": "Best Wishes!",
     "enter_quantity": "Enter quantity",
+    "enter_number_of_winners": "Enter number of winners",
     "create_time": "Create time:",
-    "blessing_words": "Blessing words",
+    "message": "Message",
+    "blessing_words": "Best Wishes",
     "nft_data_broken": "The Lucky Drop can’t be sent due to data damage.",
     "from": "From: @{{name}}",
     "share_message_official_account": "I just claimed a lucky drop from @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim lucky drops.\n$t(promote_short)\n#mask_io #LuckyDrop\n{{payload}}",
@@ -114,6 +117,7 @@
     "got_nft": "You got 1 {{name}}",
     "history": "History",
     "twitter_account": "realMaskNetwork",
+    "winners": "Winners",
     "facebook_account": "masknetwork",
     "loading": "Loading",
     "plugin_wallet_connect_a_wallet": "Connect Wallet",
@@ -121,5 +125,30 @@
     "select_all": "Select All",
     "retry": "Retry",
     "go_wrong": "Something went wrong.",
-    "no_enough_gas_fees": "No Enough Gas Fees"
+    "no_enough_gas_fees": "No Enough Gas Fees",
+    "total_amount": "Total amount",
+    "random_amount_share_tips": "Total amount shared among all winners",
+    "equal_amount_share_tips": "Enter the amount that each winner can claim",
+    "claim_requirements_tips": "You can set one or multiple rules to be eligible to win a Lucky Drop.",
+    "claim_requirements_title": "Claim Requirements",
+    "claim_requirements_rule_tips": "Use Lucky Drop quests to grow your followers and engagement. Each requirement must be completed to be eligible to claim.",
+    "follow_me": "Follow me",
+    "follow_me_description": "User must follow your account. Note: When you cross-post a Lucky Drop to multiple social networks, following you on any social allows users to claim.",
+    "reaction_title": "Like / Repost / Comment",
+    "reaction_description": "Users must like, repost / quote tweet, or comment on your Lucky Drop post.",
+    "nft_holder": "NFT holder",
+    "nft_holder_description": "Users must hold one NFT from the collection you select.",
+    "repost": "Repost",
+    "like": "Like",
+    "comment": "Comment",
+    "clear_all_requirements": "Clear all requirements",
+    "select_nft_collection_to_gate_access": "Select NFT collection to gate access",
+    "next_button": "Next",
+    "drop_type": "Drop Type",
+    "number_of_winners": "Number of winners",
+    "share_from": "Share From",
+    "share_from_tips": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
+    "image_preview": "Image Preview",
+    "unclaim_tips": "You can withdraw any unclaimed amount 24 hours after sending this lucky drop.",
+    "create_redpacket_tips": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products."
 }
