--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -49,7 +49,12 @@
     "erc721_gas_cap": "When selecting too many NFTs, the total gas fee may exceed the MetaMask limit of 1 {{symbol}}. Please reduce the number of NFTs selected.",
     "erc721_tab_title": "Collectibles",
     "erc20_tab_title": "Tokens",
+    "sent_tab_title": "Sent",
+    "claimed_tab_title": "Claimed",
     "claimed": "Claimed {{- amount}}",
+    "received": "Received",
+    "view": "View",
+    "creator": "Creator:",
     "details": "Confirm the Lucky Drop",
     "confirm": "Confirm",
     "confirming": "Confirming",
@@ -90,6 +95,7 @@
     "best_wishes": "Best Wishes!",
     "enter_quantity": "Enter quantity",
     "create_time": "Create time:",
+    "received_time": "Received time:", 
     "blessing_words": "Blessing words",
     "nft_data_broken": "The Lucky Drop can’t be sent due to data damage.",
     "from": "From: @{{name}}",
