--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -58,6 +58,7 @@
     "details": "Confirm the Lucky Drop",
     "confirm": "Confirm",
     "confirming": "Confirming",
+    "more_details": "More Details",
     "enter_each_amount": "Enter Amount Each",
     "enter_total_amount": "Enter Total",
     "enter_shares": "Enter shares",
