feat: redpacket history (#11328)
* feat: redpacket history

* fix: page loading

* fix: remove unused

* chore: remove debug code

* fix: page loading

* chore: code review

* chore: lint

* fix: height

* chore: lint

* chore: revert lock file

* refactor: root url

* chore: prettier

* chore: code review

* chore: review

---------

Co-authored-by: guanbinrui <guanbinrui@dimension.im>

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -50,10 +50,16 @@
     "erc721_gas_cap": "When selecting too many NFTs, the total gas fee may exceed the MetaMask limit of 1 {{symbol}}. Please reduce the number of NFTs selected.",
     "erc721_tab_title": "Collectibles",
     "erc20_tab_title": "Tokens",
+    "sent_tab_title": "Sent",
+    "claimed_tab_title": "Claimed",
     "claimed": "Claimed {{- amount}}",
+    "received": "Received",
+    "view": "View",
+    "creator": "Creator:",
     "details": "Confirm the Lucky Drop",
     "confirm": "Confirm",
     "confirming": "Confirming",
+    "more_details": "More Details",
     "enter_each_amount": "Enter Amount Each",
     "enter_total_amount": "Enter Total",
     "enter_shares": "Enter shares",
@@ -92,6 +98,7 @@
     "enter_quantity": "Enter quantity",
     "enter_number_of_winners": "Enter number of winners",
     "create_time": "Create time:",
+    "received_time": "Received time:",
     "message": "Message",
     "blessing_words": "Best Wishes",
     "nft_data_broken": "The Lucky Drop can’t be sent due to data damage.",
