fix: bugfix for redpacket ui

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -1,5 +1,6 @@
 {
     "amount": "Amount",
+    "no": "No",
     "promote": "🧧🧧🧧 Try sending Lucky Drop to your friends with tokens or NFTs to share the joy now! Install Mask.io to send your first Lucky Drop.",
     "promote_short": "🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io.",
     "nft_shift_select_tip": "You can also use <text>{{text}}</text> to select multiple NFTs.",
@@ -8,6 +9,7 @@
     "search": "Search",
     "loading_token": "Loading token...",
     "search_no_result": "No results",
+    "nfts": "NFTs",
     "nft_already_added": "The collectible has already been added.",
     "nft_invalid_owner": "The collectible does not belong to you.",
     "nft_max_shares": "The maximum number of NFTs to be sold in NFT lucky drop contract is {{- amount}}.",
@@ -61,8 +63,8 @@
     "confirming": "Confirming",
     "more_details": "More Details",
     "enter_each_amount": "Enter Amount Each",
-    "enter_total_amount": "Enter Total",
-    "enter_shares": "Enter shares",
+    "enter_total_amount": "Enter Total Amount",
+    "enter_shares": "Enter Number of Winners",
     "max_shares": "At most 255 recipients",
     "display_name": "Lucky Drop",
     "select_existing": "History",
@@ -151,7 +153,7 @@
     "select_nft_collection_to_gate_access": "Select NFT collection to gate access",
     "next_button": "Next",
     "drop_type": "Drop Type",
-    "number_of_winners": "Number of winners",
+    "number_of_winners": "Number of Winners",
     "share_from": "Share From",
     "share_from_tips": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
     "image_preview": "Image Preview",
