--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -128,7 +128,7 @@
     "plugin_wallet_connect_a_wallet": "Connect Wallet",
     "plugin_wallet_confirm_risk_warning": "Confirm Risk Warning",
     "plugin_wallet_update_gas_fee": "Updating Gas Fee…",
-    "plugin_wallet_no_gas_fee": "No Gas Fee",
+    "plugin_wallet_no_gas_fee": "No Enough Gas Fee",
     "plugin_wallet_invalid_network": "Invalid Network",
     "plugin_wallet_wrong_network": "Wrong Network",
     "plugin_wallet_unsupported_network": "Unsupported Network",
