fix: add loading status

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -168,5 +168,6 @@
     "share_on_firefly$farcaster": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\n Go to https://firefly.mask.social or download Firefly to create and claim any #LuckyDrop!\n\nClaim on Farcaster: {{- link }}",
     "share_on_firefly$lens_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\n Claim on Lens: {{- link }}",
     "share_on_firefly$farcaster_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\n Claim on Farcaster: {{- link }}",
-    "no_claim_data": "Nobody claimed this lucky drop yet"
+    "no_claim_data": "Nobody claimed this lucky drop yet",
+    "no_history_data": "There is no data available for display"
 }
