fix: name of nft requirements (#11364)

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -161,8 +161,8 @@
     "create_redpacket_tips": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
     "no_enough_gas_fees": "Not Enough Gas Fees",
     "requirements": "Requirements",
-    "follow_somebody_on_somewhere": "Follow <handles>{{- handles}}</handles> on {{ platform }}",
-    "nft_holder_of": "NFT Holder of {{- names }}",
+    "follow_somebody_on_somewhere": "Follow <span>{{handles}}</span> on {{ platform }}",
+    "nft_holder_of": "NFT Holder of <nfts>{{- names }}</nfts>",
     "share_on_firefly$default": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\n Go to https://firefly.mask.social or download Firefly to create and claim any #LuckyDrop!\n\nClaim on: {{- link }}",
     "share_on_firefly$lens": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\n Go to https://firefly.mask.social or download Firefly to create and claim any #LuckyDrop!\n\nClaim on Lens: {{- link }}",
     "share_on_firefly$farcaster": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\n Go to https://firefly.mask.social or download Firefly to create and claim any #LuckyDrop!\n\nClaim on Farcaster: {{- link }}",
