--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -92,7 +92,8 @@
     "chain_not_supported": "Not supported on {{chain}} yet.",
     "nft_no_history": "You haven't created any NFT lucky drop yet. Try to create and share lucky with your friends.",
     "token_no_history": "You haven't created any Token lucky drop yet. Try to create and share lucky with your friends.",
-    "history_claimed": "Claimed: <span>{{claimedShares}}/{{shares}}</span> <span>{{claimedAmount}}/{{amount}}</span> <span>{{symbol}}</span>",
+    "history_claimed": "Claimed: <span>{{claimedShares}}/{{shares}}</span> {{claimedAmount}}/{{amount}} <span>{{symbol}}</span>",
+    "history_claimed_firefly": "Claimed: <span>{{claimedShares}}/{{shares}}</span> <span>{{claimedAmount}}/{{amount}}</span> <span>{{symbol}}</span>",
     "history_nft_claimed": "Claimed: <span>{{claimedShares}}/{{shares}}</span> <span>{{symbol}}</span>",
     "send": "Send",
     "history_duration": "{{- time}} (UTC+8)",
@@ -169,6 +170,8 @@
     "share_on_firefly$farcaster": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\n Grow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Farcaster: {{- link }}",
     "share_on_firefly$lens_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\n Claim on Lens: {{- link }}",
     "share_on_firefly$farcaster_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\n Claim on Farcaster: {{- link }}",
-    "no_claim_data": "Nobody claimed this lucky drop yet",
-    "no_history_data": "There is no data available for display"
+    "no_claim_data": "No claims yet for this Lucky Drop",
+    "no_claim_history_data": "No Lucky Drops claimed",
+    "no_sent_history_data": "<div>No Lucky Drops posted.</div> <div>Select 🎁 when you compose a post to start your first drop.<div>",
+    "post_on": "Post on"
 }
