--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -1,4 +1,6 @@
 {
+    "amount": "Amount",
+    "no": "No",
     "promote": "🧧🧧🧧 Try sending Lucky Drop to your friends with tokens or NFTs to share the joy now! Install Mask.io to send your first Lucky Drop.",
     "promote_short": "🧧🧧🧧 Try sending Lucky Drop to your friends with Mask.io.",
     "nft_shift_select_tip": "You can also use <text>{{text}}</text> to select multiple NFTs.",
@@ -7,6 +9,7 @@
     "search": "Search",
     "loading_token": "Loading token...",
     "search_no_result": "No results",
+    "nfts": "NFTs",
     "nft_already_added": "The collectible has already been added.",
     "nft_invalid_owner": "The collectible does not belong to you.",
     "nft_max_shares": "The maximum number of NFTs to be sold in NFT lucky drop contract is {{- amount}}.",
@@ -49,13 +52,19 @@
     "erc721_gas_cap": "When selecting too many NFTs, the total gas fee may exceed the MetaMask limit of 1 {{symbol}}. Please reduce the number of NFTs selected.",
     "erc721_tab_title": "Collectibles",
     "erc20_tab_title": "Tokens",
+    "sent_tab_title": "Sent",
+    "claimed_tab_title": "Claimed",
     "claimed": "Claimed {{- amount}}",
+    "received": "Received",
+    "view": "View",
+    "creator": "Creator:",
     "details": "Confirm the Lucky Drop",
     "confirm": "Confirm",
     "confirming": "Confirming",
+    "more_details": "More details",
     "enter_each_amount": "Enter Amount Each",
-    "enter_total_amount": "Enter Total",
-    "enter_shares": "Enter shares",
+    "enter_total_amount": "Enter Total Amount",
+    "enter_shares": "Enter Number of Winners",
     "max_shares": "At most 255 recipients",
     "display_name": "Lucky Drop",
     "select_existing": "History",
@@ -84,13 +93,17 @@
     "nft_no_history": "You haven't created any NFT lucky drop yet. Try to create and share lucky with your friends.",
     "token_no_history": "You haven't created any Token lucky drop yet. Try to create and share lucky with your friends.",
     "history_claimed": "Claimed: <span>{{claimedShares}}/{{shares}}</span> {{claimedAmount}}/{{amount}} <span>{{symbol}}</span>",
+    "history_claimed_firefly": "Claimed: <span>{{claimedShares}}/{{shares}}</span> <span>{{claimedAmount}}/{{amount}}</span> <span>{{symbol}}</span>",
     "history_nft_claimed": "Claimed: <span>{{claimedShares}}/{{shares}}</span> <span>{{symbol}}</span>",
     "send": "Send",
     "history_duration": "{{- time}} (UTC+8)",
     "best_wishes": "Best Wishes!",
     "enter_quantity": "Enter quantity",
+    "enter_number_of_winners": "Enter number of winners",
     "create_time": "Create time:",
-    "blessing_words": "Blessing words",
+    "received_time": "Received time:",
+    "message": "Message",
+    "blessing_words": "Best Wishes",
     "nft_data_broken": "The Lucky Drop can’t be sent due to data damage.",
     "from": "From: @{{name}}",
     "share_message_official_account": "I just claimed a lucky drop from @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim lucky drops.\n$t(promote_short)\n#mask_io #LuckyDrop\n{{payload}}",
@@ -114,6 +127,7 @@
     "got_nft": "You got 1 {{name}}",
     "history": "History",
     "twitter_account": "realMaskNetwork",
+    "winners": "Winners",
     "facebook_account": "masknetwork",
     "loading": "Loading",
     "plugin_wallet_connect_a_wallet": "Connect Wallet",
@@ -121,5 +135,43 @@
     "select_all": "Select All",
     "retry": "Retry",
     "go_wrong": "Something went wrong.",
-    "no_enough_gas_fees": "No Enough Gas Fees"
+    "total_amount": "Total amount",
+    "random_amount_share_tips": "Total amount shared among all winners",
+    "equal_amount_share_tips": "Enter the amount that each winner can claim",
+    "claim_requirements_tips": "You can set one or multiple rules to be eligible to win a Lucky Drop.",
+    "claim_requirements_title": "Claim Requirements",
+    "claim_requirements_rule_tips": "Use Lucky Drop quests to grow your followers and engagement. Each requirement must be completed to be eligible to claim.",
+    "follow_me": "Follow me",
+    "follow_me_description": "User must follow your account. Note: When you cross-post a Lucky Drop to multiple social networks, following you on any social allows users to claim.",
+    "reaction_title": "Like / Repost / Comment",
+    "reaction_description": "Users must like, repost / quote tweet, or comment on your Lucky Drop post.",
+    "nft_holder": "NFT holder",
+    "nft_holder_description": "Users must hold one NFT from the collection you select.",
+    "repost": "Repost",
+    "like": "Like",
+    "comment": "Comment",
+    "clear_all_requirements": "Clear all requirements",
+    "select_nft_collection_to_gate_access": "Select NFT collection to gate access",
+    "next_button": "Next",
+    "drop_type": "Drop Type",
+    "number_of_winners": "Number of Winners",
+    "share_from": "Share From",
+    "share_from_tips": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
+    "image_preview": "Image Preview",
+    "unclaim_tips": "You can withdraw any unclaimed amount 24 hours after sending this lucky drop.",
+    "create_redpacket_tips": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
+    "no_enough_gas_fees": "Insufficient Balance for Gas Fee",
+    "infinite_unlock_tips": "Grant access to your {{ token }} for the Lucky Drop Smart contract. You only have to do this once per token.",
+    "requirements": "Requirements",
+    "follow_somebody_on_somewhere": "Follow <span>{{handles}}</span> on {{ platform }}",
+    "nft_holder_of": "NFT Holder of <nfts>{{- names }}</nfts>",
+    "share_on_firefly$default": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on: {{- link }}",
+    "share_on_firefly$lens": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Lens: {{- link }}",
+    "share_on_firefly$farcaster": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }}.\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Farcaster: {{- link }}",
+    "share_on_firefly$lens_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\nClaim on Lens: {{- link }}",
+    "share_on_firefly$farcaster_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }}! \n\nClaim on Farcaster: {{- link }}",
+    "no_claim_data": "No claims yet for this Lucky Drop",
+    "no_claim_history_data": "No Lucky Drops claimed",
+    "no_sent_history_data": "<div>No Lucky Drops posted.</div> <div>Select 🎁 when you compose a post to start your first drop.<div>",
+    "post_on": "Post on"
 }
