feat: impl eip-4361 in mask sdk (#11378)

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -950,8 +950,25 @@
     "popups_set_avatar_successfully": "Avatar set successfully",
     "popups_set_avatar_failed": "Failed to set Avatar.",
     "popups_wallet_request_source": "Request Source",
+    "popups_wallet_request_source_insecure": "Your connection to this site is not encrypted which can be modified by a hostile third party, we strongly suggest you reject this request.",
     "popups_wallet_sign_message": "Signing Messsage (Text)",
     "popups_wallet_sign_raw_message": "Signing Message (Hex)",
+    "popups_wallet_sign_in_message": "Sign-in Request",
+    "popups_wallet_sign_in_message_invalid_eip4361": "This message contains a invalid EIP-4361 message. It is better to reject this request.",
+    "popups_wallet_sign_in_message_domain": "Domain",
+    "popups_wallet_sign_in_message_issued_at": "Issued at",
+    "popups_wallet_sign_in_message_not_before": "Request is valid not before",
+    "popups_wallet_sign_in_message_not_after": "Request is valid not after",
+    "popups_wallet_sign_in_message_request_id": "Request ID",
+    "popups_wallet_sign_in_message_version": "Version",
+    "popups_wallet_sign_in_message_resource": "Resource",
+    "popups_wallet_sign_in_message_version_invalid": "Unknown EIP-4361 message version.",
+    "popups_wallet_sign_in_message_domain_invalid": "The website ({{- messageOrigin}}) is asking you to sign in to another domain ({{- domain}}). This may be a phishing attack.",
+    "popups_wallet_sign_in_message_chainID_invalid": "The chainID is not equal to the currently connected one.",
+    "popups_wallet_sign_in_message_not_before_invalid": "This request should only be sign in the future.",
+    "popups_wallet_sign_in_message_expiration_time_invalid": "This request has been expired.",
+    "popups_wallet_sign_in_danger_confirm_title": "Are you sure?",
+    "popups_wallet_sign_in_danger_confirm": "This request may be a phishing attach. I understand this and want to continue.",
     "popups_wallet_unlock_erc20_title": "Give permission to access <br /> your {{symbol}}?",
     "popups_wallet_unlock_erc20_tips": "By granting permission, you are allowing the following <br /> contract to access your funds",
     "popups_wallet_unlock_erc20_placeholder": "Enter Max spend limit",
