feat: support gasLimit and gasPrice edit in send tx

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -823,7 +823,8 @@
     "popups_wallet_gas_fee_settings_custom": "Custom",
     "popups_wallet_gas_fee": "Gas Fee",
     "popups_wallet_gas_price_too_low": "Gas price is too low and will cause the transaction to fail",
-    "popups_wallet_invalid_gas_limit": "Gas limit must be > 21,000 and < 15M.",
+    "popups_wallet_gas_limit_too_high": "Gas limit must be smaller than {{gas}}.",
+    "popups_wallet_gas_limit_too_low": "Gas limit must be bigger than {{gas}}.",
     "popups_wallet_priority_fee_is_zero": "Priority fee should be greater than 0. ",
     "popups_wallet_priority_fee_is_too_high": "Max priority fee is too high for network conditions.",
     "popups_wallet_priority_fee_is_too_low": "Max priority fee is too low for network conditions.",
