feat: add requestLogin api

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -173,5 +173,6 @@
     "no_claim_data": "No claims yet for this Lucky Drop",
     "no_claim_history_data": "No Lucky Drops claimed",
     "no_sent_history_data": "<div>No Lucky Drops posted.</div> <div>Select 🎁 when you compose a post to start your first drop.<div>",
-    "post_on": "Post on"
+    "post_on": "Post on",
+    "connect_to_platform": "Connect to {{ platform }}"
 }
