--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -223,6 +223,7 @@
     "if_installed": "2. If you have installed {{- name}} Wallet",
     "download_here": "Download {{- name}} Wallet here",
     "install_the_extension": "Install the Extension",
+    "check_out_website": "Check out the official website",
     "enable_wallet_and_disable_others": "Enable {{- name}} Wallet extension and disable other browser extension wallets",
     "recent_transaction_success": "Success",
     "recent_transaction_failed": "Failed",
