--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -54,6 +54,7 @@
     "lens": "Lens",
     "lenster": "Lenster",
     "hey": "Hey",
+    "firefly": "Firefly",
     "unlisted": "Unlisted",
     "add_wallet": "Add Wallet",
     "add_wallet_to_connected": "No connected wallet. Please add wallet.",
