--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -9,8 +9,7 @@
     "NFTs": "NFTs",
     "web3_profile": "Web3 Profile",
     "EVM_wallet": "EVM Wallet",
-    "edit_profile_in_lenster": "Edit your profile in lenster",
-    "edit_profile_tips": "{{- profile}} is owned by the current connected wallet. Please go to hey.xyz to edit profile.",
+    "view_profile_in_firefly": "View your profile in firefly",
     "Solana_wallet": "Solana Wallet",
     "Flow_wallet": "Flow Wallet",
     "network_error": "Network error, try again",
@@ -54,6 +53,7 @@
     "lens": "Lens",
     "lenster": "Lenster",
     "hey": "Hey",
+    "firefly": "Firefly",
     "unlisted": "Unlisted",
     "add_wallet": "Add Wallet",
     "add_wallet_to_connected": "No connected wallet. Please add wallet.",
