feat: support erc721 and erc1155 (#11551)

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -12,6 +12,9 @@
     "debug_new_bug_issue": "New bug issue",
     "debug_metadata_title": "Add new metadata or replace existing metadata",
     "debug_metadata_put_metadata": "Put metadata",
+    "token": "Token",
+    "token_address": "Token Address",
+    "token_value": "Token Value",
     "edit": "Edit",
     "clear": "Clear",
     "connect": "Connect",
@@ -968,6 +971,9 @@
     "popups_wallet_sign_in_message_expiration_time_invalid": "This request has been expired.",
     "popups_wallet_sign_in_danger_confirm_title": "Are you sure?",
     "popups_wallet_sign_in_danger_confirm": "This request may be a phishing attach. I understand this and want to continue.",
+    "popups_wallet_add_suggested_token": "Add Suggested Token",
+    "popups_wallet_add_suggested_token_warning": "Be aware, check the token before adding it.",
+    "popups_wallet_add_suggested_token_no_wellknown_name": "(the name is set by the web site)",
     "popups_wallet_unlock_erc20_title": "Give permission to access <br /> your {{symbol}}?",
     "popups_wallet_unlock_erc20_tips": "By granting permission, you are allowing the following <br /> contract to access your funds",
     "popups_wallet_unlock_erc20_placeholder": "Enter Max spend limit",
